--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,13 @@ python-dotenv = "^0.21.0"
 gunicorn = "^20.1.0"
 uvicorn = "^0.20.0"
 werkzeug = "^2.2.2"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+fastapi = "^0.88.0"
+pydantic = "^1.10.2"
+sqlalchemy = "^1.4.44"
+alembic = "^1.8.1"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+python-multipart = "^0.0.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
