--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ sqlalchemy = "^1.4.44"
 alembic = "^1.8.1"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 python-multipart = "^0.0.5"
+fastapi-pagination = "^0.11.0"
+pytest-mock = "^3.10.0"
+httpx = "^0.23.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
